# ME459FinalProject

./: collision_detection.out  data_proc.m  defaultFinalProjectDescription.docx  generate_mesh.py  mesh.input  result.txt  spheres.input  templateFinalProject.docx
CMake_JAVA/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  FinalProjectReport.docx  Main.java  Makefile  cmake_install.cmake  collisionDetector.java  collision_detection.out  generate_mesh.py  generate_sphere.py  helper.java  meshDataReader.java  result.txt  sphereDataReader.java  spheres.input
doxy_doc/html/: annotated.html  class_main-members.html  class_main.html  classcollision_detector-members.html  classcollision_detector.html  classes.html  classhelper-members.html  classhelper.html  classmesh_data_reader-members.html  classmesh_data_reader.html  classsphere_data_reader-members.html  classsphere_data_reader.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  index.html
doxy_doc/html/search/: all_1.js  all_3.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_2.js  classes_3.js  functions_2.js  functions_3.js  functions_5.js  searchdata.js
doxy_doc/latex/: annotated.tex  class_main.tex  classcollision_detector.tex  classhelper.tex  classmesh_data_reader.tex  classsphere_data_reader.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
src/: Main.java  collisionDetector.java  helper.java  meshDataReader.java  spheres.input
